2006-07-18  Andre Klapper  <a9016009@gmx.de>

	* gui/dialogs/calendar-setup.glade:
	* gui/dialogs/new-calendar.glade:
	* gui/dialogs/new-task-list.glade:
	* gui/dialogs/url-editor-dialog.glade:
	remove "*" from translation. Fixes bug #331147.

2006-07-17  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/apps_evolution_calendar.schemas.in.in: Corrected the text in the
	schema.

2006-07-17  Li Yuan <li.yuan@sun.com>

	* gui/dialogs/task-page.glade:
	Add labelled_by relation to start-date and due-date.
	Fix for #347473.

2006-07-17  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/apps_evolution_calendar.schemas.in.in: Added key for storing tag
	calendar position in the left pane.
	* gui/calendar-component.c: (calcomp_vpane_realized),
	(calcomp_vpane_resized), (create_component_view),
	(calendar_component_init): Added tag calendar in the left pane
	* gui/calendar-config-keys.h: Added keys to fetch conf 
	* gui/calendar-config.c: (calendar_config_get_tag_vpane_pos),
	(calendar_config_set_tag_vpane_pos):
	* gui/calendar-config.h:
	* gui/gnome-cal.c: (setup_config), (gnome_calendar_get_tag),
	(setup_widgets), (gnome_calendar_set_pane_positions),
	(gnome_calendar_hpane_realized): Removed code for tag calendar.

2006-07-14   Arvind <sa.phoenix@gmail.com>

        ** Fix for bug#330633
	* gui/dialogs/event-page.c : Enabled save button when the timezone
	  is changed from an existing meeting/appointment

	* gui/e-timezone-entry.c : prevented the shrinking of the timezone
	field when the timezone is set to the default timezone

2006-06-14 Ushveen Kaur <kushveen@novell.com>

	** Fixes bug #329772
	
	* gui/e-cal-model-tasks.c: function added to change status of a task 
	as incomplete.
	* gui/e-cal-popup.c: status of task checked and changed to incomplete 
	if option selected.
	* gui/e-cal-popup.h: E_CAL_POPUP_SELECT_COMPLETE added
	* gui/e-calendar-table.c: function added to mark the task in selected 
	row as incomplete.

2006-07-11  Li Yuan <li.yuan@sun.com>
