@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <error-list domain="calendar">
 
- <error id="prompt-cancel-meeting" type="question" defult="GTK_RESPONSE_YES">
+ <error id="prompt-cancel-meeting" type="question" default="GTK_RESPONSE_YES">
   <_primary>Would you like to send all the participants a cancelation notice?</_primary>
   <_secondary>If you do not send a cancelation notice, the other participants may not know the meeting is canceled.</_secondary>
   <button _label="Do _not Send" response="GTK_RESPONSE_NO"/>
   <button _label="_Send Notice" response="GTK_RESPONSE_YES"/>
  </error>
 
- <error id="prompt-delete-meeting" type="question" defult="GTK_RESPONSE_NO">
+ <error id="prompt-delete-meeting" type="question" default="GTK_RESPONSE_NO">
   <_primary>Are you sure you want to delete this meeting?</_primary>
   <_secondary>All information on this meeting will be deleted and can not be restored.</_secondary>
   <button stock="gtk-cancel" response="GTK_RESPONSE_NO"/>
   <button stock="gtk-delete" response="GTK_RESPONSE_YES"/>
  </error>
 
- <error id="prompt-cancel-task" type="question" defult="GTK_RESPONSE_YES">
+ <error id="prompt-cancel-task" type="question" default="GTK_RESPONSE_YES">
   <_primary>Would you like to send all the participants a cancelation notice?</_primary>
   <_secondary>If you do not send a cancelation notice, the other participants may not know the task has been deleted.</_secondary>
   <button _label="Do _not Send" response="GTK_RESPONSE_NO"/>
   <button _label="_Send Notice" response="GTK_RESPONSE_YES"/>
  </error>
 
- <error id="prompt-delete-task" type="question" defult="GTK_RESPONSE_NO">
+ <error id="prompt-delete-task" type="question" default="GTK_RESPONSE_NO">
   <_primary>Are you sure you want to delete this task?</_primary>
   <_secondary>All information on this task will be deleted and can not be restored.</_secondary>
   <button stock="gtk-cancel" response="GTK_RESPONSE_NO"/>
   <button stock="gtk-delete" response="GTK_RESPONSE_YES"/>
  </error>
 
- <error id="prompt-cancel-journal" type="question" defult="GTK_RESPONSE_YES">
+ <error id="prompt-cancel-journal" type="question" default="GTK_RESPONSE_YES">
   <_primary>Would you like to send a cancelation notice for this journal entry?</_primary>
   <_secondary>If you do not send a cancelation notice, the other participants may not know the journal has been deleted.</_secondary>
   <button _label="Do _not Send" response="GTK_RESPONSE_NO"/>
   <button _label="_Send Notice" response="GTK_RESPONSE_YES"/>
  </error>
 
- <error id="prompt-delete-journal" type="question" defult="GTK_RESPONSE_NO">
+ <error id="prompt-delete-journal" type="question" default="GTK_RESPONSE_NO">
   <_primary>Are you sure you want to delete this journal entry?</_primary>
   <_secondary>All information on this journal entry will be deleted and can not be restored.</_secondary>
   <button stock="gtk-cancel" response="GTK_RESPONSE_NO"/>
@@ -64,22 +64,8 @@
   <button stock="gtk-delete" response="GTK_RESPONSE_YES"/>
  </error>
 
- <error id="prompt-delete-task" type="question" default="GTK_RESPONSE_NO">
-  <_primary>Are you sure you want to delete this task?</_primary>
-  <_secondary>All information on this task will be deleted and can not be restored.</_secondary>
-  <button stock="gtk-cancel" response="GTK_RESPONSE_NO"/>
-  <button stock="gtk-delete" response="GTK_RESPONSE_YES"/>
- </error>
-
  <error id="prompt-delete-named-journal" type="question" default="GTK_RESPONSE_NO">
   <_primary>Are you sure you want to delete the journal entry '{0}'?</_primary>
-  <_secondary>All information in this journal will be deleted and can not be restored.</_secondary>
-  <button stock="gtk-cancel" response="GTK_RESPONSE_NO"/>
-  <button stock="gtk-delete" response="GTK_RESPONSE_YES"/>
- </error>
-
- <error id="prompt-delete-journal" type="question" default="GTK_RESPONSE_NO">
-  <_primary>Are you sure you want to delete this journal entry?</_primary>
   <_secondary>All information in this journal will be deleted and can not be restored.</_secondary>
   <button stock="gtk-cancel" response="GTK_RESPONSE_NO"/>
   <button stock="gtk-delete" response="GTK_RESPONSE_YES"/>
